--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p class="container__text">Comme des Garcons PLAY Black</p>
         </div>
         <div class="sneaker item4">
-          <img alt="adidas Yeezy Foam RNR" src="img/adidasyeezy.png" class="container__image"/>
+          <img alt="adidas Yeezy Foam RNR" src="img/adidasyeezyFoamRNNRadidasyeezy.png" class="container__image"/>
           <h3 class="container__title">adidas Yeezy Foam RNR</h3>
           <p class="container__text">Desert Sand</p>
         </div>
