--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
           <h3 class="container__title">Converse Chuck 70 High</h3>
           <p class="container__text">Comme des Garcons PLAY Black</p>
         </div>
-
+        <div class="sneaker item4">
+          <img alt="adidas Yeezy Foam RNR" src="img/adidasyeezyFoamRNNRadidasyeezy.png" class="container__image"/>
+          <h3 class="container__title">adidas Yeezy Foam RNR</h3>
+          <p class="container__text">Desert Sand</p>
+        </div>
         <div class="sneaker item5">
           <img alt="Nike Air Max Plus" src="img/image3nikeairmaxplus.png" class="container__image"/>
           <h3 class="container__title">Nike Air Max Plus</h3>
